# HFTBuilding

./: .gitignore  HFT가속기_핵심개념정리.md  ITCH수신_4주_일별계획.md  ITCH수신_Cpp_학습로드맵.md  README.md
itch-receiver/: .gitignore  CMakeLists.txt  Dockerfile  SETUP.md
itch-receiver/src/: ITCHparsing.cpp  main.cpp
